--- a/Natours/starter/sass/components/_button.scss
+++ b/Natours/starter/sass/components/_button.scss
@@ -1,6 +1,8 @@
 .btn {
 
-  &:link, &:visited {
+  &,
+  &:link,
+  &:visited {
     text-transform: uppercase;
     text-decoration: none;
     padding: 1.5rem 4rem;
@@ -8,7 +10,12 @@
     border-radius: 10rem;
     transition: all .2s;
     position: relative;
-    font-size: 1.6rem;
+    font-size: $default-font-size;
+
+    // change for the <button> element
+    border: none;
+    cursor: pointer;
+
   }
 
   &:hover {
@@ -21,7 +28,11 @@
     }
   }
 
-  &:active {
+  // Active is for anchor and focus is for button
+  &:active,
+  &:focus {
+    // outline is to get rid of the blue outline for button
+    outline: none;
     transform: translateY(-.1rem);
     box-shadow: 0 .5rem 1rem rgba($color-black, .4);
   }
@@ -32,6 +43,16 @@
 
     &::after {
       background-color: $color-white;
+    }
+
+  }
+
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary;
     }
 
   }
@@ -52,6 +73,32 @@
   &--animated {
     animation: moveInBottom .5s ease-out .75s;
     animation-fill-mode: backwards;
+  }
+
+}
+
+.btn-text {
+  &:link,
+  &:visited {
+    font-size: $default-font-size;
+    color: $color-primary;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 1px solid $color-primary;
+    padding: 3px;
+    transition: all .2s;
+  }
+
+  &:hover {
+    background-color: $color-primary;
+    color: $color-white;
+    box-shadow: 0 1rem 2rem rgba($color-black, .3);
+    transform: translateY(-2px);
+  }
+
+  &:active {
+    box-shadow: 0 .5rem 1rem rgba($color-black, .3);
+    transform: translateY(0);
   }
 
 }
