--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -8,14 +8,18 @@
 @import "base/utilities";
 
 @import "components/button";
+@import "components/card";
+@import "components/composition";
+@import "components/feature-box";
+@import "components/story";
+@import "components/bg-video";
+@import "components/form";
 
 @import "layout/grid";
-
 @import "layout/header";
+@import "layout/footer";
 
 @import "pages/home";
-
-
 
 /*
 COLORS:
