--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -174,4 +174,58 @@
     font-size: 6rem;
     font-weight: 100;
   }
+
+  @include respond(tab-port) {
+
+    // When the child is set to position absolute the parent collapses
+    height: auto;
+    border-radius: 3px;
+    background-color: $color-white;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+
+    &__side {
+      //background-color: orangered;
+      //color: $color-white;
+      height: auto;
+      position: relative;
+      box-shadow: none;
+
+
+      &--back {
+        //background-color: green;
+        //Initial rotated
+        transform: rotateY(0deg);
+        clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
+      }
+
+    }
+
+    &:hover &__side--front {
+      transform: rotateY(0deg);
+    }
+
+
+    &__details {
+      padding: 1rem 3rem;
+    }
+
+    // Front side styling
+    &__cta {
+      position: relative;
+      top: 0;
+      left: 0;
+      width: 100%;
+      transform: translate(0);
+      padding: 7rem 4rem 4rem 4rem;
+    }
+
+    &__price-box {
+      margin-bottom: 3rem;
+    }
+
+    &__price-value {
+      font-size: 6rem;
+    }
+
+  }
 }
