--- a/Natours/starter/sass/layout/_footer.scss
+++ b/Natours/starter/sass/layout/_footer.scss
@@ -3,10 +3,18 @@
   padding: 10rem 0;
   font-size: 1.4rem;
 
+  @include respond(tab-port) {
+    padding: 8rem 0;
+  }
+
   &__logo-box {
     // image is an inline element
     text-align: center;
     margin-bottom: 8rem;
+
+    @include respond(tab-port) {
+      margin-bottom: 6rem;
+    }
   }
 
   &__logo {
@@ -19,6 +27,11 @@
     padding: 2rem;
     // Limit the length of the line to the menu items. Doesn't occupy 100% available width
     display: inline-block;
+
+    @include respond(tab-port) {
+      width: 100%;
+      text-align: center;
+    }
   }
 
   &__list {
@@ -60,5 +73,10 @@
     padding: 2rem;
     width: 80%;
     float: right;
+
+    @include respond(tab-port) {
+      width: 80%;
+      float: none;
+    }
   }
 }
